unpackaged/main/default/objects/Product2/fields/AutodeskBusinessType__c.field-meta.xml
<CustomField>
    <fullName>AutodeskBusinessType__c</fullName>
    <formula>IF(ISPICKVAL(Category__c,"Autodesk"),
   IF(CONTAINS(Description, "Renewal"), "Renewal", "New"),
  "N/A"
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Autodesk Business Type</label>
    <type>Text</type>
</CustomField>