unpackaged/main/default/objects/Product2/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Family</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>3Dconnexion</fullName>
            </value>
            <value>
                <fullName>3DSystems</fullName>
            </value>
            <value>
                <fullName>Academy</fullName>
            </value>
            <value>
                <fullName>AGS</fullName>
            </value>
            <value>
                <fullName>aPriori</fullName>
            </value>
            <value>
                <fullName>Autodesk</fullName>
            </value>
            <value>
                <fullName>AutoTrack</fullName>
            </value>
            <value>
                <fullName>Bakbone</fullName>
            </value>
            <value>
                <fullName>C3P</fullName>
            </value>
            <value>
                <fullName>Chaos Group</fullName>
            </value>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Citrix</fullName>
            </value>
            <value>
                <fullName>Dassault</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>Elysium</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>IBM</fullName>
            </value>
            <value>
                <fullName>Icona</fullName>
            </value>
            <value>
                <fullName>JLR</fullName>
            </value>
            <value>
                <fullName>KnowledgePoint</fullName>
            </value>
            <value>
                <fullName>Majenta</fullName>
            </value>
            <value>
                <fullName>Mentor Graphics</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>MX</fullName>
            </value>
            <value>
                <fullName>NetApp</fullName>
            </value>
            <value>
                <fullName>NETGEAR</fullName>
            </value>
            <value>
                <fullName>Overland</fullName>
            </value>
            <value>
                <fullName>QNAP</fullName>
            </value>
            <value>
                <fullName>Quadrispace</fullName>
            </value>
            <value>
                <fullName>Rolls-Royce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>