unpackaged/main/default/objects/Product2/fields/CorrectType__c.field-meta.xml
<CustomField>
    <fullName>CorrectType__c</fullName>
    <label>Correct Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>