unpackaged/main/default/objects/Product2/fields/DassaultAvailabilityPick__c.field-meta.xml
<CustomField>
    <fullName>DassaultAvailabilityPick__c</fullName>
    <description>Dassault Availability</description>
    <label>Dassault Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GA</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>