unpackaged/main/default/objects/Product2/fields/DassaultLicenceTypePick__c.field-meta.xml
<CustomField>
    <fullName>DassaultLicenceTypePick__c</fullName>
    <label>Dassault Licence Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALC</fullName>
            </value>
            <value>
                <fullName>ASC</fullName>
            </value>
            <value>
                <fullName>PLC</fullName>
            </value>
            <value>
                <fullName>PSC</fullName>
            </value>
            <value>
                <fullName>QLC</fullName>
            </value>
            <value>
                <fullName>QSC</fullName>
            </value>
            <value>
                <fullName>TBL2</fullName>
            </value>
            <value>
                <fullName>TBL3</fullName>
            </value>
            <value>
                <fullName>TSC3</fullName>
            </value>
            <value>
                <fullName>YLC</fullName>
            </value>
            <value>
                <fullName>YSC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>