unpackaged/main/default/objects/Product2/fields/DassaultLicensingSchemePick__c.field-meta.xml
<CustomField>
    <fullName>DassaultLicensingSchemePick__c</fullName>
    <description>Dassault Licensing Scheme</description>
    <label>Dassault Licensing Scheme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add-On</fullName>
            </value>
            <value>
                <fullName>Casual Named User</fullName>
            </value>
            <value>
                <fullName>Concurrent</fullName>
            </value>
            <value>
                <fullName>Credit Based</fullName>
            </value>
            <value>
                <fullName>Machine Based</fullName>
            </value>
            <value>
                <fullName>Named User</fullName>
            </value>
            <value>
                <fullName>Packaged Offering</fullName>
            </value>
            <value>
                <fullName>Specific</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>To be completed</fullName>
            </value>
            <value>
                <fullName>Token Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>