unpackaged/main/default/objects/Product2/fields/DassaultOfferingPick__c.field-meta.xml
<CustomField>
    <fullName>DassaultOfferingPick__c</fullName>
    <label>DS Offering</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DS Offering</fullName>
            </value>
            <value>
                <fullName>Licensed Program</fullName>
            </value>
            <value>
                <fullName>Online Services</fullName>
            </value>
            <value>
                <fullName>Packaged Offering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>