unpackaged/main/default/objects/Product2/fields/DassaultTrigram__c.field-meta.xml
<CustomField>
    <fullName>DassaultTrigram__c</fullName>
    <description>Dassault Trigram</description>
    <label>Dassault Trigram</label>
    <length>50</length>
    <type>Text</type>
</CustomField>