unpackaged/main/default/objects/Product2/fields/DassaultTypePick__c.field-meta.xml
<CustomField>
    <fullName>DassaultTypePick__c</fullName>
    <description>Dassault Type</description>
    <label>Dassault Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add-On</fullName>
            </value>
            <value>
                <fullName>Casual Named User</fullName>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Machine Based</fullName>
            </value>
            <value>
                <fullName>Named User</fullName>
            </value>
            <value>
                <fullName>Offer</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Shareable</fullName>
            </value>
            <value>
                <fullName>Single Add-On</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Token</fullName>
            </value>
            <value>
                <fullName>Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>