unpackaged/main/default/objects/Product2/fields/Distributor2__c.field-meta.xml
<CustomField>
    <fullName>Distributor2__c</fullName>
    <label>Distributor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>aPriori</fullName>
            </value>
            <value>
                <fullName>Autodesk</fullName>
            </value>
            <value>
                <fullName>Computers Unlimited</fullName>
            </value>
            <value>
                <fullName>Datech2000</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>Arrow ECS</fullName>
            </value>
            <value>
                <fullName>Elysium</fullName>
            </value>
            <value>
                <fullName>Icona</fullName>
            </value>
            <value>
                <fullName>Man &amp; Machine</fullName>
            </value>
            <value>
                <fullName>Paramex</fullName>
            </value>
            <value>
                <fullName>Sensable</fullName>
            </value>
            <value>
                <fullName>Siemens</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Westcoast</fullName>
            </value>
            <value>
                <fullName>Savoy Computing</fullName>
            </value>
            <value>
                <fullName>Knowledge Point</fullName>
            </value>
            <value>
                <fullName>KnowledgePoint</fullName>
            </value>
            <value>
                <fullName>Majenta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>