unpackaged/main/default/objects/Product2/fields/Hidden_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Product_ID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hidden Product ID</label>
    <type>Text</type>
</CustomField>