unpackaged/main/default/objects/Product2/fields/Is3rdPartySupplier__c.field-meta.xml
<CustomField>
    <fullName>Is3rdPartySupplier__c</fullName>
    <formula>NOT(Supplier__r.IsMajenta__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>3rd Party Supplier</label>
    <type>Checkbox</type>
</CustomField>