unpackaged/main/default/objects/Product2/fields/LongDescription__c.field-meta.xml
<CustomField>
    <fullName>LongDescription__c</fullName>
    <label>Long Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>