unpackaged/main/default/objects/Product2/fields/Majenta_Shop_URL__c.field-meta.xml
<CustomField>
    <fullName>Majenta_Shop_URL__c</fullName>
    <label>Majenta Shop URL</label>
    <type>Url</type>
</CustomField>