unpackaged/main/default/objects/Product2/fields/MarkupPercentage__c.field-meta.xml
<CustomField>
    <fullName>MarkupPercentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Markup Percentage</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>