unpackaged/main/default/objects/Product2/fields/ProductGrouping__c.field-meta.xml
<CustomField>
    <fullName>ProductGrouping__c</fullName>
    <label>Product Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2D</fullName>
            </value>
            <value>
                <fullName>2D/3D</fullName>
            </value>
            <value>
                <fullName>3D Suite</fullName>
            </value>
            <value>
                <fullName>Factory Layout</fullName>
            </value>
            <value>
                <fullName>Simulation</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>AEC</fullName>
            </value>
            <value>
                <fullName>Visualisation</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>