unpackaged/main/default/objects/Product2/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <label>Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>3DSync</fullName>
            </value>
            <value>
                <fullName>3DX-OC</fullName>
            </value>
            <value>
                <fullName>3DX-OP</fullName>
            </value>
            <value>
                <fullName>Alias</fullName>
            </value>
            <value>
                <fullName>AutoCAD</fullName>
            </value>
            <value>
                <fullName>CAA V5-OP</fullName>
            </value>
            <value>
                <fullName>CATIA / ENOVIA DMU-OP</fullName>
            </value>
            <value>
                <fullName>CATIA Composer-OP</fullName>
            </value>
            <value>
                <fullName>CATIA V5-OP</fullName>
            </value>
            <value>
                <fullName>CATIA V6-OP</fullName>
            </value>
            <value>
                <fullName>Composer-OC</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>DELMIA D5-OP</fullName>
            </value>
            <value>
                <fullName>DELMIA V5-OP</fullName>
            </value>
            <value>
                <fullName>DraftSight-OP</fullName>
            </value>
            <value>
                <fullName>ENOVIA SmarTeam V5-OP</fullName>
            </value>
            <value>
                <fullName>ENOVIA VPLM V5-OP</fullName>
            </value>
            <value>
                <fullName>ENOVIAvpm-OP</fullName>
            </value>
            <value>
                <fullName>Femap</fullName>
            </value>
            <value>
                <fullName>ICEM Surf-OP</fullName>
            </value>
            <value>
                <fullName>Inventor</fullName>
            </value>
            <value>
                <fullName>NX</fullName>
            </value>
            <value>
                <fullName>NX I-deas</fullName>
            </value>
            <value>
                <fullName>Showcase</fullName>
            </value>
            <value>
                <fullName>Simulation</fullName>
            </value>
            <value>
                <fullName>Simulation-OP</fullName>
            </value>
            <value>
                <fullName>Simulayt V5-OP</fullName>
            </value>
            <value>
                <fullName>Simulayt V6-OP</fullName>
            </value>
            <value>
                <fullName>SIMULIA-OC</fullName>
            </value>
            <value>
                <fullName>SIMULIA-OP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>