unpackaged/main/default/objects/Product2/fields/Supplier_Discount__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Discount__c</fullName>
    <label>Supplier Discount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>