unpackaged/main/default/objects/Product2/fields/TypeMismatch__c.field-meta.xml
<CustomField>
    <fullName>TypeMismatch__c</fullName>
    <formula>NOT(ISBLANK(CorrectType__c)) &amp;&amp;
TEXT(Type__c) != CorrectType__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Mismatch</label>
    <type>Checkbox</type>
</CustomField>