unpackaged/main/default/objects/Product2/recordTypes/enerjyhub.recordType-meta.xml
<RecordType>
    <fullName>enerjyhub</fullName>
    <active>true</active>
    <description>This record type is for enerjyhub products</description>
    <label>enerjyhub</label>
</RecordType>