unpackaged/main/default/objects/Product2/recordTypes/Standard_Products.recordType-meta.xml
<RecordType>
    <fullName>Standard_Products</fullName>
    <active>true</active>
    <description>This is for all other products than EnerjyHUB</description>
    <label>Standard Products</label>
</RecordType>