unpackaged/main/default/objects/Product2/listViews/Software_Services_Products.listView-meta.xml
<ListView>
    <fullName>Software_Services_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Type__c</columns>
    <columns>Supplier_Discount__c</columns>
    <columns>Category__c</columns>
    <columns>Distributor2__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Software</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Services</value>
    </filters>
    <filters>
        <field>Subtype__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Majenta</value>
    </filters>
    <label>Software Services Products</label>
</ListView>