unpackaged/main/default/objects/Product2/listViews/SoftwareTrainingProducts.listView-meta.xml
<ListView>
    <fullName>SoftwareTrainingProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Type__c</columns>
    <columns>Supplier_Discount__c</columns>
    <columns>Category__c</columns>
    <columns>Distributor2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Software</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Subtype__c</field>
        <operation>equals</operation>
        <value>Training</value>
    </filters>
    <label>Software Training Products</label>
</ListView>